CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(apitest)

SET(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")

ADD_EXECUTABLE(apitest ${PROJECT_SOURCE_DIR}/test.cc ${PROJECT_SOURCE_DIR}/invokedynamic.cc)
TARGET_LINK_LIBRARIES(apitest dl)